fix issue with horizontal scrolling

--- a/src/styles/10_app/10_App.scss
+++ b/src/styles/10_app/10_App.scss
@@ -1,6 +1,6 @@
 #app{
   position: relative;
-  width: 100vw;
+  width: 100%;
 
   .page{
     width: 100%;
